[package]
name = "macro-dep-test"
version = "0.1.5"
edition = "2021"
repository = "https://github.com/matklad/macro-dep-test"
description = "testing version resolution for associated macros"
license = "MIT OR Apache-2.0"

[workspace]

[dependencies]
macro-dep-test-macros = { version="=0.1.5", path="./macros", optional=true }

[target.'cfg(any())'.dependencies]
macro-dep-test-macros = { version="=0.1.5", path="./macros" }

[features]
derive = ["dep:macro-dep-test-macros"]
